syntax = "proto3";

package demo;

/*
 * Returns a greeting for the given person optionally including a custom message.
 */
service HelloWorld {
    rpc SayHello(ToBeGreeted) returns (Greeting) {}
}

message ToBeGreeted {
    message Person {
        string name = 1;
    }

    Person person = 1;
    string msg = 2;
}

message Greeting {
    string message = 1;
}